🐛 fixed issue Text and background need more contrast on Administration page #192

--- a/imports/ui/styles/dark.scss
+++ b/imports/ui/styles/dark.scss
@@ -170,6 +170,9 @@ $accordion-button-active-bg:            $lightgrey;
 $accordion-button-active-color:         $body-color;
 $accordion-bg:                          $grey;
 
+//Table
+$table-color:                           $data-text-color;
+
 //++++ [AdvancedCustomization] ++++ ///////////////////////////////////////////////////////
 .is-dark-theme {
     color: black;
